Closed
Bug 201663
Opened 23 years ago
Closed 23 years ago
FTP download from nightly / trunk - archives are short
Categories
(Core Graveyard :: Networking: FTP, defect, P1)
Core Graveyard
Networking: FTP
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.4beta
People
(Reporter: noririty, Assigned: darin.moz)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
|
201.21 KB,
image/jpeg
|
Details | |
|
583 bytes,
patch
|
dougt
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
Reproducible: Always
Steps to Reproduce:
1. Load ftp://ftp.mozilla.org/pub/phoenix/nightly/2003-04-10-08-trunk/
2. Right-click the file and select "Save Link Target As...".
3. Click "OK" or "Save"
Actual Results:
File (archive) is broken. Smaller than usual.
Expected Results:
File should be download completely.
- Occurs On
2003041009 build on WindowsME
2003040909 build on WindowsXP
2003040908 build Phoenix on WindowsXP
- Doesn't Occur On
2003040808 build on WindowsXP
If you Left-click to download, an error appears at the end of download follow:
> Download Error
> C:\DOCUME~1\[USERNAME]\LOCALS~1\TEMP\hogehoge.zip could not be saved, because
the source file could not be read.
>
> Try again later, or contact the server administrator.
Comment 2•23 years ago
|
||
I've had this basic problem too - same releases up to 041009
Using an alternate ftp program works fine though so it isn't
a problem with the ftp.mozilla.org server(s).
The linux and win tar.gz and .exe files are not complete after
the download completes.
I've also noticed that I most often don't get a full display on the
nightly dir (image attached). Flushing cache and/or restarting browser
doesn't help. Image to follow.
Comment 3•23 years ago
|
||
Comment 4•23 years ago
|
||
Upon further testing downloading files from (current) nightly trunk bits
I get short files (wget, cygwin ftp, SecureFX using ftp). For example:
# wget --passive -nd
ftp://ftp.mozilla.org/pub/mozilla/nightly/latest/mozilla-i686-pc-linux-gnu-sea.tar.gz
--10:55:15--
ftp://ftp.mozilla.org/pub/mozilla/nightly/latest/mozilla-i686-pc-linux-gnu-sea.tar.gz
=> `mozilla-i686-pc-linux-gnu-sea.tar.gz.1'
Resolving ftp.mozilla.org... done.
Connecting to ftp.mozilla.org[64.12.168.243]:21... connected.
Logging in as anonymous ... Logged in!
==> SYST ... done. ==> PWD ... done.
==> TYPE I ... done. ==> CWD /pub/mozilla/nightly/latest ... done.
==> PASV ... done. ==> RETR mozilla-i686-pc-linux-gnu-sea.tar.gz ... done.
Length: 14,785,502 (unauthoritative)
100%[=========================================================================================>]
14,785,502 14.04K/s ETA 00:00
11:12:25 (14.04 KB/s) - `mozilla-i686-pc-linux-gnu-sea.tar.gz.1' saved [14785502]
# tar ztvf mozilla-i686-pc-linux-gnu-sea.tar.gz
drwxr-xr-x cltbld/wheel 0 2003-04-11 06:53:54 ./mozilla-installer/
drwxr-xr-x cltbld/wheel 0 2003-04-11 06:53:53 ./mozilla-installer/xpi/
-rw-r--r-- cltbld/wheel 812380 2003-04-11 06:53:41 ./mozilla-installer/xpi/xpcom.xpi
-rw-r--r-- cltbld/wheel 8801736 2003-04-11 06:53:48
./mozilla-installer/xpi/browser.xpi
-rw-r--r-- cltbld/wheel 850789 2003-04-11 06:53:50 ./mozilla-installer/xpi/psm.xpi
-rw-r--r-- cltbld/wheel 2078769 2003-04-11 06:53:51 ./mozilla-installer/xpi/mail.xpi
-rw-r--r-- cltbld/wheel 150361 2003-04-11 06:53:52
./mozilla-installer/xpi/chatzilla.xpi
-rw-r--r-- cltbld/wheel 824118 2003-04-11 07:13:14
./mozilla-installer/xpi/talkback.xpi
-rw-r--r-- cltbld/wheel 7497 2003-04-11 06:53:52
./mozilla-installer/xpi/deflenus.xpi
-rw-r--r-- cltbld/wheel 686287 2003-04-11 06:53:52
./mozilla-installer/xpi/langenus.xpi
-rw-r--r-- cltbld/wheel 34799 2003-04-11 06:53:52
./mozilla-installer/xpi/regus.xpi
-rw-r--r-- cltbld/wheel 242413 2003-04-11 06:53:53
./mozilla-installer/xpi/venkman.xpi
-rw-r--r-- cltbld/wheel 228450 2003-04-11 06:53:53
./mozilla-installer/xpi/inspector.xpi
-rwxr-xr-x cltbld/wheel 1619 2003-04-11 06:53:39
./mozilla-installer/mozilla-installer
-rwxr-xr-x cltbld/wheel 918001 2003-04-11 06:53:39
./mozilla-installer/mozilla-installer-bin
gzip: stdin: unexpected end of file
tar: Unexpected EOF in archive
tar: Error is not recoverable: exiting now
The point at which this fails seems to be consistant (for this image) no matter
what I've tried. Can someone at Netscape pls test the built archive?
Updated•23 years ago
|
Summary: FTP download sucks → FTP download from nightly / trunk - archives are short
Comment 5•23 years ago
|
||
A good example showing this problem (truncated files) is:
ftp://ftp.mozilla.org/pub/data/crash-data/Trunk-topcrashers.html
Compare row counts (rank). Today's file: IE yields 358 rows, Mozilla
2003-04-09-09 yields 336 rows.
| Assignee | ||
Comment 6•23 years ago
|
||
it is wrong to close the data connection from KillControlConnection. now that
we call DataConnectionComplete from nsFTPChannel::OnStopRequest, it is fine to
simply delete the call from KillControlConnection. doing so, seems to 1) solve
the bug and 2) not introduce any memory leaks.
| Assignee | ||
Updated•23 years ago
|
Severity: critical → blocker
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.4beta
| Assignee | ||
Updated•23 years ago
|
Attachment #120232 -
Flags: superreview?(bryner)
Attachment #120232 -
Flags: review?(dougt)
Updated•23 years ago
|
Attachment #120232 -
Flags: review?(dougt) → review+
| Assignee | ||
Comment 9•23 years ago
|
||
Tomoaki Sakamoto: yes, that is to be expected. the patch has not yet been
checked into the trunk. when you see this bug marked FIXED, wait for the build
from the following day =)
Comment 10•23 years ago
|
||
This problem has also affected the recent nightlies for Mac OS X. The OS field
should be changed to All.
Updated•23 years ago
|
Attachment #120232 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 11•23 years ago
|
||
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
OS: Windows XP → All
Hardware: PC → All
Resolution: --- → FIXED
Comment 12•23 years ago
|
||
*** Bug 198076 has been marked as a duplicate of this bug. ***
Comment 13•23 years ago
|
||
*** Bug 201859 has been marked as a duplicate of this bug. ***
Comment 15•23 years ago
|
||
*** Bug 202100 has been marked as a duplicate of this bug. ***
Comment 16•23 years ago
|
||
*** Bug 202129 has been marked as a duplicate of this bug. ***
Comment 17•23 years ago
|
||
ben please run any ftp regression tests that you have.
| Reporter | ||
Comment 18•23 years ago
|
||
*** Bug 202731 has been marked as a duplicate of this bug. ***
Comment 19•22 years ago
|
||
Doug: you didn't mention looking at this bug in the discussion we had last week
about regression testing, but the FTP functional test was run post-fix, and did
not have any problems.
Updated•2 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•