fixes bug 201663 "FTP download from nightly / trunk - archives are short" r=dougt sr=bryner